resolve conflict navbar version mobile

--- a/assets/perso.css
+++ b/assets/perso.css
@@ -293,63 +293,4 @@ button:hover {
   font-size: 2rem;
   font-style: italic;
 }
-.header-container {
-  flex-direction: column;
-  align-items: center;
-}
 
-.nav-brand {
-  margin-right: 0;
-  margin-bottom: 20px; 
-}
-
-.nav-links {
-  flex-direction: column;
-  margin: 0;
-}
-
-.nav-links li {
-  padding: 10px 0; 
-}
-
-.nav-icons span {
-  margin: 0 5px;
-}
-
-.carouselslide,
-.carouselthumbnails li {
-  width: 100%;
-  flex-basis: auto;
-}
-
-.site-info, .container {
-  flex-basis: auto; 
-  width: 100%; 
-  padding: 0 10px; 
-}
-
-.code-promo, .footer, .bas-page {
-  flex-direction: column;
-  text-align: center; 
-}
-
-.text1-footer, .text2-footer {
-  margin-left: 20px; 
-  margin-top: 20px;
-  font-size: 1.2rem; 
-}
-
-.nav-brand img {
-width: 80px; 
-}
-
-.nav-icons span img {
-height: 20px; 
-width: auto; 
-}
-
-@media (max-width: 768px) {
-.nav-icons span:last-child {
-  display: none;
-}
-}
